syntax="proto3";

service GrpcClient {
  rpc Set (SetRequest) returns (SetReply) {}
  rpc Get (GetRequest) returns (GetReply) {}
}
message GetRequest {
  string key = 1;
}
message GetReply {
  string key = 1;
  optional string value = 2;
}
message SetRequest {
  string key = 1;
  string value = 2;
}
message SetReply {
  string key = 1;
  string value = 2;
}